# nba-ev

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  collect_nba_stats.py  docker-compose.yml  podman-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
data/: nba_stats_20250211.xlsx
docs/: API.md  CONTRIBUTING.md  analysis_insights.md  architecture.md  betting_model.md  data_analysis.md  data_cleaning.md  data_collection_guide.md  data_pipeline.md  visualization_guide.md
docs/architecture/: workers.md
docs/setup/: installation.md  monitoring.md
monitoring/grafana/dashboards/: dashboards.yaml  nba_collector.json
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
notebooks/: data_exploration.ipynb
scripts/: create_notebook.py  ev.py  start.sh
src/: deploy_scrapers.py  main.py
src/analysis/: data_cleaning.py  efficiency.py  simulation.py
src/cleaning/: data_cleaner.py  test_cleaning.py  validate_data.py
src/collectors/: basketball_reference.py  cache_manager.py  historical_collector.py  historical_data.py  lineups_scraper.py  metrics_server.py  nba_api.py  odds_api.py  test_collection.py
src/data/: clean_data.py
src/database/: __init__.py  check_team_names.py  explore_db.py  init_db.py  manager.py  models.py
src/frontend/: app.py  dashboard.py
src/monitoring/: metrics.py
src/visualization/: lineup_plots.py  plots.py
src/workers/: scraper_worker.py  task_queue.py
tests/: test_lineups_scraper.py
