[project]
name = "nba-ev"
version = "0.1.0"
description = "NBA betting analysis and simulation tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "basketball-reference-web-scraper>=4.15.3",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "monaco>=0.15.1",
    "nba-api>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
